# portfolio

./: .gitignore  README.md
agents/product_search_agent/: .env.example  README.md  pyproject.toml
agents/product_search_agent/src/api/: models.py
agents/product_search_agent/src/core/: agent.py  geo_url_validator_agent.py  pipeline_stages.py  price_extractor.py  product_page_candidate_identifier.py  relevance_scorer.py
k8s/maintenance/: README.md  pod-gc.cronjob.yaml
k8s/ollama/: deployment.yaml
k8s/openwebui/: README.md  deployment.yaml  ingress.yaml
k8s/secrets/templates/: openwebui.template.yaml
k8s/web_crawler/: ingress.yaml
services/openwebui_tools/: deploy.sh
services/renderer/: deploy.sh
services/web_crawler/: deploy.sh
shared/shared/shared/: logging.py  redis_client.py
