[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "product_search_agent"
version = "0.1.0"
description = "Product search agent for AI platform"
authors = [
  { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "shared @ file:///Users/fabian/dev/Personal/portfolio/shared/shared", 
  "pydantic>=2.0.0",
  "langchain>=0.3.25",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.23.0",
  "black>=24.0.0",
  "isort>=5.13.0"
] 